setup mainn.yml

--- a/nnew folder/.github/workflows/main.yml
+++ b/nnew folder/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Testing github action'
+      - name: 'Testing github Action'
         run: pwd
 
 
