--- a/nnew folder/.github/workflows/main.yml
+++ b/nnew folder/.github/workflows/main.yml
@@ -12,9 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Testing github Action'
+      - name: 'Before'
         run: ls
 
+      - uses: actions/checkout@v3
+
+
+      - name: 'After'
+        run: ls
 
       - name: 'Testing Printing'
         run: echo Tasneem
