--- a/nnew folder/.github/workflows/main.yml
+++ b/nnew folder/.github/workflows/main.yml
@@ -12,14 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Before'
-        run: ls
+      
 
       - uses: actions/checkout@v3
+      
+      -name: "Login to Docker hub"
+        run:docker login --username tasneem98100 --password dckr_pat_4rxE8Kd19LeseGBfIrHlIGwiLIc
 
-
-      - name: 'After'
-        run: ls
 
       - name: 'Testing Printing'
         run: echo Tasneem
