--- a/nnew folder/.github/workflows/main.yml
+++ b/nnew folder/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       
       -name: "Login to Docker hub"
-        run:docker login --username tasneem98100 --password dckr_pat_4rxE8Kd19LeseGBfIrHlIGwiLIc
+        run:docker login --username ${{ secrete.DOCKER6_USERNAME }} --password ${{ secrete.DOCKER_TOCKEN }}
 
 
       - name: 'Testing Printing'
